@@ -11,6 +11,8 @@
 <a href="install.html">How to install ipsvd</a><br>
 <a href="usedietlibc.html">How to use dietlibc</a>
 <p>
+<a href="examples.html">Examples</a>
+<p>
 <a href="ipsvd.7.html">The <tt>ipsvd</tt> interface</a><br>
 <a href="tcpsvd.8.html">The <tt>tcpsvd</tt> program</a><br>
 <a href="udpsvd.8.html">The <tt>udpsvd</tt> program</a><br>
