@@ -1,11 +1,13 @@
 ipsvd 0.4.0
-Sun, 04 May 2003 12:39:50 +0200
+Mon, 05 May 2003 13:15:45 +0200
   * ipsvd_check.c, ipsvd_check.h, tcpsvd.c: optionally send alert message
     to client when denying connection due to per host concurrency limit.
   * man/ipsvd-instruct.5, man/tcpsvd.8: adapt.
   * ipsvd_fmt.c, ipsvd_fmt.h: ipsvd_fmt_msg(): convert backslash-escaped
     characters in message.
   * package/upgrade: typo.
+  * doc/examples.html: new.
+  * doc/index.html: adapt.
 
 ipsvd 0.3.4
 Tue, 29 Apr 2003 14:56:43 +0200
